--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "Lua.diagnostics.disable": [
+        "undefined-field"
+    ],
     "Lua.diagnostics.globals": [
         "currentState"
     ]
