inDev v.1.2 - ITS DUPLICATING!
More cool stuff and more patties

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "undefined-field"
     ],
     "Lua.diagnostics.globals": [
-        "currentState"
+        "currentState",
+        "currentMouseState",
+        "lastMouseState"
     ]
 }
